syntax = "proto3";

package api.user.v1;

option go_package = "demo/api/user/v1;v1";
option java_multiple_files = true;
option java_package = "api.user.v1";

service User {
	rpc CreateUser (CreateUserRequest) returns (CreateUserReply);
	rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply);
	rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
	rpc GetUser (GetUserRequest) returns (GetUserReply);
	rpc ListUser (ListUserRequest) returns (ListUserReply);
}
message UserDto {
	int32 id = 6;
	string name = 1;
	string email = 2;
	int32 age = 3;
	string current_address = 4;
	string permanent_address = 5;
}
message UserResponse {
	UserDto userDto = 1;
	string error = 2;
}
message CreateUserRequest {
	UserDto user = 1;
}
message CreateUserReply {
	UserResponse userResponse = 1;
}

message UpdateUserRequest {
	UserDto userDto = 2;
}
message UpdateUserReply {
	int32  id = 1;
	UserResponse userResponse = 2;
}

message DeleteUserRequest {
	int32 id = 1;
}
message DeleteUserReply {
	bool success = 1;
	string error = 2;
}

message GetUserRequest {
	int32 id = 1;
}
message GetUserReply {
	UserDto userDto = 1;
}

message ListUserRequest {
	repeated int32 userIds = 1;
}
message ListUserReply {
	repeated UserDto userDtos = 1;
}